agrego en modificarStock lo mismo, getSize y stock. para que no se rompa en front.